# practiquesVisio

prac1/src/: main.cpp
prac2/: CMakeLists.txt
prac2/src/: .dictionary.h.swp  calibrate_camera.cpp  common.cpp  common.h  detect_markers.cpp  dictionary.cpp  dictionary.h  generate_board.cpp  generate_marker.cpp  marker.cpp
